<?xml version="1.0"?>
<package format="2">
  <name>real_test</name>
  <version>0.1.0</version>
  <description>Real flight test nodes for UAV control</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS核心依赖 -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <!-- MAVROS依赖 -->
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- 其他工具 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>